--- a/views/messageDetail.ejs
+++ b/views/messageDetail.ejs
@@ -6,7 +6,7 @@
   </head>
   <body>
     <div class="container">
-      <h2>Name of user: <%= message.user %></h2>
+      <h2>Name of user: <%= message.username %></h2>
       <h1>Text: <%= message.text %></h1>
       <h3>Date: <%= message.added %></h3>
       <a href="/" class="button">Back</a>
